@@ -205,7 +205,7 @@
     <webpage>http://live.gnome.org/EyeOfGnome</webpage>
     <maintainer id="lucasr"/>
     <svnmodule>eog</svnmodule>
-    <branch id="HEAD" stringfrozen="true">
+    <branch id="HEAD">
       <domain id="po">
         <_description>UI translations</_description>
       </domain>
@@ -216,6 +216,7 @@
     </branch>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>  
   <module id="epiphany">
     <_description>Epiphany Web Browser</_description>
