@@ -352,7 +352,7 @@
       <module id="deskbar-applet"/>
       <module id="eel"/>
       <module id="ekiga" branch="gnome-2-14"/>
-      <module id="eog"/>
+      <module id="eog" branch="gnome-2-18"/>
       <module id="epiphany" branch="gnome-2-18"/>
       <module id="evince"/>
       <module id="evolution" branch="gnome-2-18"/>
