@@ -1,3 +1,8 @@
+2007-03-18  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: eog branched for 2.18.
+
 2007-03-17  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
